Files.writeString instead of Files.write